[gd_scene load_steps=11 format=2]

[ext_resource path="res://escenas/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenas/instanciar_enemigos/InstanciaEnemigos.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenas/fondos/FondoMuestra.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenas/ui_vidas/UIVidas.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Sonidos_dos/TRG_Banks_-_04_-_The_travelling_show.ogg" type="AudioStream" id=5]
[ext_resource path="res://escenas/nivel_3/Nivel3.gd" type="Script" id=6]
[ext_resource path="res://escenas/menu_pausa/MenuPausa.tscn" type="PackedScene" id=7]
[ext_resource path="res://escenas/items/instancia_items/instancia_items.tscn" type="PackedScene" id=10]
[ext_resource path="res://escenas/colision_nivel_1_a_2/Escena1A2.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 211.514 )

[node name="WorldTest" type="Node2D" groups=[
"UI",
]]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 137.498, 543.28 )
scale = Vector2( 0.25, 0.25 )

[node name="FondoMuestra" parent="." instance=ExtResource( 3 )]

[node name="GeneradorEnemigos" parent="." instance=ExtResource( 2 )]
position = Vector2( 1033.55, 596.314 )

[node name="GeneradorEnemigos3" parent="." instance=ExtResource( 2 )]
position = Vector2( 13963.9, 558.506 )
obstaculo = "pared"

[node name="GeneradorEnemigos23" parent="." instance=ExtResource( 2 )]
position = Vector2( 12740.7, 592.372 )

[node name="GeneradorEnemigos24" parent="." instance=ExtResource( 2 )]
position = Vector2( 9077.07, 572.377 )
obstaculo = "pared"

[node name="GeneradorEnemigos25" parent="." instance=ExtResource( 2 )]
position = Vector2( 10591, 602.75 )

[node name="GeneradorEnemigos26" parent="." instance=ExtResource( 2 )]
position = Vector2( 6771.6, 572.749 )
obstaculo = "pared"

[node name="GeneradorEnemigos32" parent="." instance=ExtResource( 2 )]
position = Vector2( 6135.59, 572.749 )
obstaculo = "pared"

[node name="GeneradorEnemigos27" parent="." instance=ExtResource( 2 )]
position = Vector2( 5571.94, 593.922 )

[node name="GeneradorEnemigos28" parent="." instance=ExtResource( 2 )]
position = Vector2( 3722.35, 573.823 )
obstaculo = "pared"

[node name="GeneradorEnemigos4" parent="." instance=ExtResource( 2 )]
position = Vector2( 2491.73, 384.969 )
obstaculo = "circulo"

[node name="GeneradorEnemigos5" parent="." instance=ExtResource( 2 )]
position = Vector2( 2287.66, 600.15 )

[node name="GeneradorEnemigos29" parent="." instance=ExtResource( 2 )]
position = Vector2( 1856.54, 600 )

[node name="GeneradorEnemigos2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1401.08, 572.74 )
obstaculo = "pared"

[node name="GeneradorEnemigos7" parent="." instance=ExtResource( 2 )]
position = Vector2( 2658.38, 599.385 )

[node name="GeneradorEnemigos30" parent="." instance=ExtResource( 2 )]
position = Vector2( 3188.39, 600 )

[node name="GeneradorEnemigos31" parent="." instance=ExtResource( 2 )]
position = Vector2( 4591.51, 600 )

[node name="GeneradorEnemigos22" parent="." instance=ExtResource( 2 )]
position = Vector2( 5065.57, 369.865 )
obstaculo = "circulo"

[node name="GeneradorEnemigos9" parent="." instance=ExtResource( 2 )]
position = Vector2( 5820.1, 592.653 )

[node name="GeneradorEnemigos10" parent="." instance=ExtResource( 2 )]
position = Vector2( 4043.67, 571.205 )
obstaculo = "pared"

[node name="GeneradorEnemigos11" parent="." instance=ExtResource( 2 )]
position = Vector2( 7508.61, 379.083 )
obstaculo = "circulo"

[node name="GeneradorEnemigos12" parent="." instance=ExtResource( 2 )]
position = Vector2( 6461.07, 594.266 )

[node name="GeneradorEnemigos13" parent="." instance=ExtResource( 2 )]
position = Vector2( 12088.4, 563.855 )
obstaculo = "pared"

[node name="GeneradorEnemigos14" parent="." instance=ExtResource( 2 )]
position = Vector2( 7511.61, 593.63 )

[node name="GeneradorEnemigos33" parent="." instance=ExtResource( 2 )]
position = Vector2( 8010.93, 600 )

[node name="GeneradorEnemigos34" parent="." instance=ExtResource( 2 )]
position = Vector2( 8278.73, 600 )

[node name="GeneradorEnemigos35" parent="." instance=ExtResource( 2 )]
position = Vector2( 9603.75, 600 )

[node name="GeneradorEnemigos15" parent="." instance=ExtResource( 2 )]
position = Vector2( 8773.24, 574.058 )
obstaculo = "pared"

[node name="GeneradorEnemigos16" parent="." instance=ExtResource( 2 )]
position = Vector2( 10081.3, 375.906 )
obstaculo = "circulo"

[node name="GeneradorEnemigos17" parent="." instance=ExtResource( 2 )]
position = Vector2( 10357.5, 568.434 )
obstaculo = "pared"

[node name="GeneradorEnemigos18" parent="." instance=ExtResource( 2 )]
position = Vector2( 11580.1, 598.243 )

[node name="GeneradorEnemigos36" parent="." instance=ExtResource( 2 )]
position = Vector2( 11336.4, 598.243 )

[node name="GeneradorEnemigos37" parent="." instance=ExtResource( 2 )]
position = Vector2( 12403, 594.248 )

[node name="GeneradorEnemigos39" parent="." instance=ExtResource( 2 )]
position = Vector2( 13203.3, 600 )

[node name="GeneradorEnemigos19" parent="." instance=ExtResource( 2 )]
position = Vector2( 10936.5, 600 )

[node name="GeneradorEnemigos20" parent="." instance=ExtResource( 2 )]
position = Vector2( 14210.4, 558.947 )
obstaculo = "pared"

[node name="GeneradorEnemigos21" parent="." instance=ExtResource( 2 )]
position = Vector2( 12734, 367.417 )
obstaculo = "circulo"

[node name="GeneradorEnemigos6" parent="." instance=ExtResource( 2 )]
position = Vector2( 13697.1, 560.217 )
obstaculo = "pared"

[node name="GeneradorEnemigos8" parent="." instance=ExtResource( 2 )]
position = Vector2( 14707, 373.868 )
obstaculo = "circulo"

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIVidas" parent="UI" instance=ExtResource( 4 )]
margin_bottom = 200.0
rect_scale = Vector2( 0.4, 0.4 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MenuPausa" parent="UI" instance=ExtResource( 7 )]

[node name="Sountrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ColisionFinal" parent="." instance=ExtResource( 11 )]
position = Vector2( 15639.3, 518.27 )

[node name="instancia_items" parent="." instance=ExtResource( 10 )]
position = Vector2( 5060.26, 349.758 )
obstaculo = "smite"

[node name="instancia_items2" parent="." instance=ExtResource( 10 )]
position = Vector2( 10065.7, 339.685 )

[node name="instancia_items3" parent="." instance=ExtResource( 10 )]
position = Vector2( 14664.3, 340.059 )
obstaculo = "love"

[node name="FinalAnimacion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalAnimacion"]
position = Vector2( 15250.9, 467.375 )
shape = SubResource( 1 )
[connection signal="area_entered" from="FinalAnimacion" to="." method="_on_FinalAnimacion_area_entered"]
